refactor: security cleanup, PayPal gateway relocation, Stripe webhook mapping, and category/service synchronization